--- a/style.css
+++ b/style.css
@@ -691,7 +691,7 @@ body.dark-mode .skincare-card .icon {
 
 @media (max-width: 480px) {
   .skincare-container {
-    margin: 0.5rem 0.5rem;
+    margin: 0.5rem 1.5rem 0.5rem;
     padding: 0.8rem;
     border-radius: 15px;
   }
